# qa_guru_python_8_22_mobile

./: .gitignore  README.md  config.py  conftest.py  project.py  pyproject.toml  pytest.ini
qa_guru_python_8_21_mobile/utils/: allure.py
qa_guru_python_8_22_mobile/utils/: __init__.py  allure.py  allure_attach.py  file.py
tests/: conftest.py  test_sample_app_ios.py  test_wikipedia.py  test_wikipedia_android.py
